<resources>
    <string name="app_name">TaskMaster</string>
    <string name="all_tasks">All Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_new_task">Add New Task</string>
    <string name="todo_tasks">TODO Tasks</string>
    <string name="task_description">Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="user_profile">User profile</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="add_username">Add Username</string>
    <string name="study_dsa">study DSA</string>
    <string name="_10_am_meeting">10 am Meeting</string>
    <string name="java_tasks">java tasks</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada nibh sit amet massa fermentum, eget consequat sapien malesuada.</string>
    <string name="task_state">Task State</string>
    <string name="task_team">Task Team</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="update">Update</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">LOG IN</string>
    <string name="verify_account">Verify Account</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="log_out">LOG OUT</string>
    <string name="add_task_image">Add task image</string>
    <string name="delete_task_image">delete Task Image</string>
</resources>